preview the QE of SK

--- a/Detector/Makefile
+++ b/Detector/Makefile
@@ -1,11 +1,14 @@
 .PHONY:
 all: parameters.pdf
-
+refraction.csv:
+	wget https://refractiveindex.info/tmp/data/main/H2O/Hale.csv -O refraction.csv
 parameters.pdf:
-	python3 absorptionLength.py -o $@
+	python3 Preview.py -o $@
 energyloss.pdf:
 	python3 EnergyLoss.py -o $@
 cherenkov.pdf:
 	python3 cherenkovYield.py -o $@
+angleRMS.pdf:
+	python3 MultipleAngle.py -o $@
 .SECONDARY:
 .DELETE_ON_ERROR:
