adjust the mean excitation energy value; use kinetic energy

--- a/Detector/Makefile
+++ b/Detector/Makefile
@@ -1,14 +1,18 @@
 .PHONY:
-all: parameters.pdf
+all: output/parameters.pdf
 refraction.csv:
 	wget https://refractiveindex.info/tmp/data/main/H2O/Hale.csv -O refraction.csv
-parameters.pdf:
+output/parameters.pdf:
+	mkdir -p $(@D)
 	python3 Preview.py -o $@
-energyloss.pdf:
+output/energyloss.pdf:
+	mkdir -p $(@D)
 	python3 EnergyLoss.py -o $@
-cherenkov.pdf:
+output/cherenkov.pdf:
+	mkdir -p $(@D)
 	python3 cherenkovYield.py -o $@
-angleRMS.pdf:
+output/angleRMS.pdf:
+	mkdir -p $(@D)
 	python3 MultipleAngle.py -o $@
 .SECONDARY:
 .DELETE_ON_ERROR:
